--- a/DSA Lab Day 2.ipynb
+++ b/DSA Lab Day 2.ipynb
@@ -163,6 +163,212 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsorted List: [33, 54, 79, 12, 29, 10, 33]\n",
+      "Sorted List: [10, 12, 29, 33, 33, 54, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Selection sort\n",
+    "\n",
+    "lst = [33, 54, 79, 12, 29, 10, 33]\n",
+    "print(\"Unsorted List:\", lst)\n",
+    "\n",
+    "for i in range(len(lst)-1):\n",
+    "    m_ind = i\n",
+    "    # find min index\n",
+    "    for j in range(i+1, len(lst)):\n",
+    "        if lst[j] < lst[m_ind]:\n",
+    "            m_ind = j\n",
+    "\n",
+    "    # swap ith value with min value if values are different\n",
+    "    if lst[i] != lst[m_ind]:\n",
+    "        lst[i], lst[m_ind] = lst[m_ind], lst[i]\n",
+    "\n",
+    "print(\"Sorted List:\", lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsorted List: [33, 54, 79, 12, 29, 10, 33]\n",
+      "\n",
+      "sorted list: [10, 12, 29, 33, 33, 54, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bubble sort\n",
+    "\n",
+    "lst = [33, 54, 79, 12, 29, 10, 33]\n",
+    "print(\"Unsorted List:\", lst)\n",
+    "n = len(lst)\n",
+    "for i in range(n-1):\n",
+    "    for j in range(n-i-1):\n",
+    "        if lst[j] > lst[j+1]:\n",
+    "            lst[j], lst[j+1] = lst[j+1], lst[j]\n",
+    "print(\"\\nsorted list:\", lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsorted List: [33, 54, 79, 12, 29, 10, 33]\n",
+      "\n",
+      "Sorted list: [10, 12, 29, 33, 33, 54, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quick sort - list comprehension\n",
+    "\n",
+    "lst = [33, 54, 79, 12, 29, 10, 33]\n",
+    "print(\"Unsorted List:\", lst)\n",
+    "\n",
+    "def quick_sort(arr):\n",
+    "    if len(arr) <= 1:\n",
+    "        return arr\n",
+    "    \n",
+    "    pivot = arr[0]\n",
+    "    left = [x for x in arr[1:] if x < pivot]\n",
+    "    right = [x for x in arr[1:] if x >= pivot]\n",
+    "    return quick_sort(left) + [pivot] + quick_sort(right)\n",
+    "\n",
+    "print(\"\\nSorted list:\", quick_sort(lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsorted List: [33, 54, 79, 12, 29, 10, 33]\n",
+      "\n",
+      "Sorted list: [10, 12, 29, 33, 33, 54, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Merge sort\n",
+    "\n",
+    "lst = [33, 54, 79, 12, 29, 10, 33]\n",
+    "print(\"Unsorted List:\", lst)\n",
+    "    \n",
+    "def merge(arr, left_arr, right_arr):\n",
+    "    i=j=k=0\n",
+    "    while i < len(left_arr) and j < len(right_arr):\n",
+    "        if left_arr[i] < right_arr[j]:\n",
+    "            arr[k]=left_arr[i]\n",
+    "            i += 1\n",
+    "            k += 1\n",
+    "        else:\n",
+    "            arr[k] = right_arr[j]\n",
+    "            j += 1\n",
+    "            k += 1\n",
+    "    \n",
+    "    while i < len(left_arr):\n",
+    "        arr[k] = left_arr[i]\n",
+    "        i += 1\n",
+    "        k += 1\n",
+    "\n",
+    "    while j < len(right_arr):\n",
+    "        arr[k] = right_arr[j]\n",
+    "        j += 1\n",
+    "        k += 1\n",
+    "\n",
+    "def merge_sort(arr):\n",
+    "    if len(arr) > 1:\n",
+    "        mid = len(arr)//2\n",
+    "        left_arr = arr[:mid]\n",
+    "        right_arr = arr[mid:]\n",
+    "        merge_sort(left_arr)\n",
+    "        merge_sort(right_arr)\n",
+    "        merge(arr, left_arr, right_arr)\n",
+    "    return arr\n",
+    "    \n",
+    "print(\"\\nSorted list:\", merge_sort(lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insertion sort\n",
+    "\n",
+    "lst = [33, 54, 79, 12, 29, 10, 33]\n",
+    "print(\"Unsorted List:\", lst)\n",
+    "\n",
+    "def insertion_sort(arr):\n",
+    "    pass\n",
+    "\n",
+    "print(\"\\nSorted list:\", insertion_sort(lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Yes' if int(input())>=18 else None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "a[:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -185,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
